<resources>
    <string name="app_name">Restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Mahsulot qo\'shish</string>
    <string name="name">Ism</string>
    <string name="please">Iltimos lotin yozuvida kiriting</string>
    <string name="category_name">Kategoriya nomi</string>
    <string name="iltimos_lotin_yozuvida_kiriting">Iltimos lotin yozuvida kiriting</string>
    <string name="brand_name">Brand nomi</string>
    <string name="product">Mahsulot</string>
    <string name="errorImageMessage">Rasm 2mb dan kam bo\'lsin!</string>
    <string name="errorImageMessageCamera">Rasm 10 mb dan kichik bo\'lsin!</string>
    <string name="todo" translatable="false">TODO</string>
    <string-array name="entry_values_choose_image">
        <item>@string/selectGallery</item>
        <item>@string/takePicture</item>
    </string-array>
    <string name="selectGallery">Galeriydan tanlash</string>
    <string name="takePicture">Rasmga olish</string>
    <string name="message_select_or_take">Galeriyadan tanlash yoki kameradan tushirish</string>
    <string name="tables">Tables</string>
    <string name="history">История</string>
    <string name="to_go">Собой</string>
    <string name="logout">Выход</string>
    <string name="pay">Вводить</string>
    <string name="choose_table">Please choose table number</string>
    <string name="table_no">Номер стола</string>
    <string name="meal_name">Продукт</string>
    <string name="how_many">Сколько</string>
    <string name="total">Итого</string>
    <string name="print">Печатать</string>
    <string name="cash">Наличные</string>
    <string name="card">Карта</string>
    <string name="cashback">Cashback</string>
    <string name="login">Login</string>
    <string name="please_enter_your_n_restaurant_password">Please enter your restaurant \n login and password</string>
    <string name="password">Password</string>
    <string name="open_cash">Open Cash</string>
    <string name="exit_cash">Exit Cash</string>
    <string name="price">Цена</string>
    <string name="send">Send</string>
    <string name="cashier_name">Shohboz</string>
    <string name="number_table">№ Стол</string>
    <string name="order_price">Итого</string>
    <string name="pay_type">Способ оплаты</string>
    <string name="cash_back">Сдача</string>
    <string name="order_detail">Детали заказа</string>
    <string name="table_number">Номер стола</string>
    <string name="product_name">Продукт</string>
    <string name="product_price">Цена</string>
    <string name="product_how_many">Сколько</string>
    <string name="total_price">Итого</string>
    <string name="empty">Пустой!</string>
    <string name="send_order">Отправить</string>
    <string name="log_out">Выход</string>
    <string name="back">Назад</string>
    <string name="table">Столы</string>
    <string name="id">ID</string>
    <string name="productName">Наименование товара</string>
    <string name="massa">Масса</string>
    <string name="massa_birligi">Единица массы</string>
    <string name="search">Поиск</string>
    <string name="today">Сегодня</string>
    <string name="export">Экспорт</string>
    <string name="input">Приход</string>
    <string name="output">Расход</string>
    <string name="kg">Кг</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="history">История</string>
</resources>