<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1.5dp"
    android:elevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="001"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/number_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/number_table"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_price"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pay_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pay_type"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cash_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cash_back"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            tools:ignore="RtlSymmetry">



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/order_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_light"
                    android:gravity="center"
                    android:paddingStart="22dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="22dp"
                    android:paddingBottom="6dp"
                    android:text="@string/order_detail"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>