<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wareHouse.addProduct.AddProductFragment">

    <LinearLayout
        android:id="@+id/loading_layout_add_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/add_product"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/ic_text_format"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/please"
                    android:textColor="@color/green" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputCategoryId"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEditTextCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/ic_search"
                        android:hint="@string/category_name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/category_helper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/iltimos_lotin_yozuvida_kiriting"
                    android:textColor="@color/green" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <Button
                    android:id="@+id/btn_add_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/ripple"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/add_product"
                    android:textColor="@color/white" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include
        android:id="@+id/progress_bar_add_product"
        layout="@layout/progress_bar" />
</FrameLayout>