<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/front2"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#7E000000"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/signUp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:text="@string/please_enter_your_n_restaurant_password"
        android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login"
                android:maxLength="16"
                android:maxLines="1"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/white"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="32dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:maxLength="16"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textColor="@color/white"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:layout_width="360dp"
            android:layout_marginTop="32dp"
            android:layout_height="@dimen/buttonHeight"
            android:background="@drawable/cashier_btn_bgn"
            android:gravity="center"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textColor="@color/white" />



    <include
        android:id="@+id/progress_bar_register"
        layout="@layout/progress_bar" />

    </LinearLayout>
</LinearLayout>